--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
   <header class="header">
-    <img src="./images/image.svg" alt="Логотип. Место Россия" class="header__logo">
+    <img src="./images/logo.svg" alt="Логотип" class="header__logo">
   </header>
   
 </body>
