--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <header class="header">
     <img src="./images/logo.svg" alt="Логотип" class="header__logo">
   </header>
-  
+  <main  class="container">
+    <section class="profile">
+      <img src="./images/avatar.svg" alt="Аватар" class="profile__avatar">
+    </section>
+  </main>
 </body>
 </html>
