--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
   </header>
   <main  class="container">
     <section class="profile">
-      <img src="./images/avatar.svg" alt="Аватар" class="profile__avatar">
+      <div class="profile__avatar">
+        <img src="./images/avatar.svg" alt="Аватар" class="profile__image">
+      </div>
+        <div class="profile__info">
+          
+        </div>
     </section>
+
   </main>
 </body>
 </html>
