--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./images/avatar.svg" alt="Аватар" class="profile__image">
       </div>
         <div class="profile__info">
-          
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
         </div>
     </section>
 
