profile button start

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       </div>
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="button"></button>
         </div>
+        <p class="profile__description">Исследователь океана</p>
     </section>
 
   </main>
