--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
       <div class="profile__avatar">
         <img src="./images/avatar.svg" alt="Аватар" class="profile__image">
       </div>
-        <div class="profile__info">
+      <div class="profile__box">
+         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
         </div>
         <p class="profile__description">Исследователь океана</p>
+      </div>
+      <button class="profile__add-button" type="button"></button>
     </section>
 
   </main>
