--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
-
+    <section class="cards">
+      <div class="card">
+        
+      </div>
+    </section>
   </main>
 </body>
 </html>
