--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
       <button class="profile__add-button" type="button"></button>
     </section>
     <section class="cards">
-      <div class="card">
-        
+      <div class="cards__item">
+        <img src="./images/castle.jpg" alt="Карачаевск" class="card__image">
+        <div class="card__name">
+            <h2 class="card__description">Карачаевск</h2>
+            <button class="card__like" type="button"></button>
+        </div>
       </div>
     </section>
   </main>
