crds description fix

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </section>
     <section class="cards">
       <div class="cards__item">
-        <img src="./images/castle.jpg" alt="Карачаевск" class="card__image">
-        <div class="card__name">
-            <h2 class="card__description">Карачаевск</h2>
-            <button class="card__like" type="button"></button>
+        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <div class="cards__name">
+            <h2 class="cards__description">Карачаевск</h2>
+            <button class="cards__like" type="button"></button>
         </div>
       </div>
     </section>
