--- a/index.html
+++ b/index.html
@@ -33,7 +33,45 @@
             <button class="cards__like" type="button"></button>
         </div>
       </div>
+      <div class="cards__item">
+        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <div class="cards__name">
+            <h2 class="cards__description">Карачаевск</h2>
+            <button class="cards__like" type="button"></button>
+        </div>
+      </div>
+      <div class="cards__item">
+        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <div class="cards__name">
+            <h2 class="cards__description">Карачаевск</h2>
+            <button class="cards__like" type="button"></button>
+        </div>
+      </div>
+      <div class="cards__item">
+        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <div class="cards__name">
+            <h2 class="cards__description">Карачаевск</h2>
+            <button class="cards__like" type="button"></button>
+        </div>
+      </div>
+       <div class="cards__item">
+        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <div class="cards__name">
+            <h2 class="cards__description">Карачаевск</h2>
+            <button class="cards__like" type="button"></button>
+        </div>
+      </div>
+       <div class="cards__item">
+        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <div class="cards__name">
+            <h2 class="cards__description">Карачаевск</h2>
+            <button class="cards__like" type="button"></button>
+        </div>
+      </div>
     </section>
   </main>
+  <footer class="footer">
+    <p class="footer__copyright">© 2020 Mesto Russia</p>
+  </footer>
 </body>
 </html>
