--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
         </div>
       </div>
       <div class="cards__item">
-        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <img src="./images/mountain.jpg" alt="Гора Эльбрус" class="cards__image">
         <div class="cards__name">
-            <h2 class="cards__description">Карачаевск</h2>
+            <h2 class="cards__description">Гора Эльбрус</h2>
             <button class="cards__like" type="button"></button>
         </div>
       </div>
       <div class="cards__item">
-        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <img src="./images/Dombai.jpg" alt="Домбай" class="cards__image">
         <div class="cards__name">
-            <h2 class="cards__description">Карачаевск</h2>
+            <h2 class="cards__description">Домбай</h2>
             <button class="cards__like" type="button"></button>
         </div>
       </div>
       <div class="cards__item">
-        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <img src="./images/Dombai.jpg" alt="Домбай" class="cards__image">
         <div class="cards__name">
-            <h2 class="cards__description">Карачаевск</h2>
+            <h2 class="cards__description">Домбай</h2>
             <button class="cards__like" type="button"></button>
         </div>
       </div>
@@ -62,9 +62,9 @@
         </div>
       </div>
        <div class="cards__item">
-        <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
+        <img src="./images/mountain.jpg" alt="Гора Эльбрус" class="cards__image">
         <div class="cards__name">
-            <h2 class="cards__description">Карачаевск</h2>
+            <h2 class="cards__description">Гора Эльбрус</h2>
             <button class="cards__like" type="button"></button>
         </div>
       </div>
@@ -73,5 +73,8 @@
   <footer class="footer">
     <p class="footer__copyright">© 2020 Mesto Russia</p>
   </footer>
+  <div class="popup">
+    
+  </div>
 </body>
 </html>
