--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <title>Mesto</title>
 </head>
 <body class="body">
+  <!---  Header  --->
   <header class="header">
     <img src="./images/logo.svg" alt="Логотип" class="header__logo">
   </header>
-  <main  class="container">
+  <main class="container">
+    <!---  Profile  --->
     <section class="profile">
       <div class="profile__avatar">
         <img src="./images/avatar.svg" alt="Аватар" class="profile__image">
@@ -25,6 +27,7 @@
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
+    <!---  Cards  --->
     <section class="cards">
       <div class="cards__item">
         <img src="./images/castle.jpg" alt="Карачаевск" class="cards__image">
@@ -70,11 +73,15 @@
       </div>
     </section>
   </main>
+  <!---  Footer  --->
   <footer class="footer">
     <p class="footer__copyright">© 2020 Mesto Russia</p>
   </footer>
+  <!---  Popup  --->
   <div class="popup">
-    
+    <div class="popup__box">
+      
+    </div>
   </div>
 </body>
 </html>
