name changed + form created

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
   </footer>
   <!---  Popup  --->
   <div class="popup">
-    <div class="popup__box">
-      
+    <div class="popup__container">
+      <button class="popup__close-button" type="button" aria-label="Закрыть форму"></button>
+      <form class="popup__form" name="profile_information" method="post"></form>
     </div>
   </div>
 </body>
