--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть форму"></button>
       <form class="popup__form" name="profile_information" method="post"></form>
+      <h3 class="popup__title">Редактировать профиль</h3>
     </div>
   </div>
 </body>
