--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
   <div class="popup">
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть форму"></button>
-      <form class="popup__form" name="profile_information" method="post"></form>
       <h3 class="popup__title">Редактировать профиль</h3>
+      <form class="popup__form" name="profile_information" method="post">
+        <input type="text" name="name" class="popup__input popup__input_type_name">
+        <input type="text" name="about" class="popup__input popup__input_type_about">
+
+      </form>
     </div>
   </div>
 </body>
