--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
       <form class="popup__form" name="profile_information" method="post">
         <input type="text" name="name" class="popup__input popup__input_type_name">
         <input type="text" name="about" class="popup__input popup__input_type_about">
-
+        <input type="submit" class="popup__submit page__button">
       </form>
     </div>
   </div>
+  <script src="./script/index.js"></script>
 </body>
 </html>
