--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
         </div>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__job">Исследователь океана</p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
@@ -84,7 +84,7 @@
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="profile_information" method="post">
         <input type="text" name="name" class="popup__input popup__input_type_name">
-        <input type="text" name="about" class="popup__input popup__input_type_about">
+        <input type="text" name="about" class="popup__input popup__input_type_job">
         <input type="submit" class="popup__submit page__button">
       </form>
     </div>
