--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <form class="popup__form" name="profile_information" method="post">
         <input type="text" name="name" class="popup__input popup__input_type_name">
         <input type="text" name="about" class="popup__input popup__input_type_job">
-        <input type="submit" class="popup__submit page__button">
+        <input type="submit" class="popup__submit">
       </form>
     </div>
   </div>
