--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <main class="container">
     <!---  Profile  --->
     <section class="profile">
-      <div class="profile__avatar">
-        <img src="./images/avatar.svg" alt="Аватар" class="profile__image">
-      </div>
+        <img src="./images/jacques-yves_cousteau.jpg" alt="Аватар" class="profile__image">
       <div class="profile__box">
          <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -82,7 +80,7 @@
     <div class="popup__container">
       <button class="popup__close-button" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="profile_information" method="post">
+      <form class="popup__form" name="profile_information">
         <input type="text" name="name" class="popup__input popup__input_type_name">
         <input type="text" name="about" class="popup__input popup__input_type_job">
         <input type="submit" class="popup__submit">
