--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <form class="popup__form" name="profile_information">
         <input type="text" name="name" class="popup__input popup__input_type_name">
         <input type="text" name="about" class="popup__input popup__input_type_job">
-        <input type="submit" class="popup__submit">
+        <input type="submit" class="popup__submit" value="Сохранить">
       </form>
     </div>
   </div>
