--- a/index.html
+++ b/index.html
@@ -107,7 +107,19 @@
         <p class="popup__description"></p>
        </div>
     </div>
+  <!---  Template  --->
+  <template class="template">
+      <div class="item">
+        <button class="item__delete" type="button"></button>
+        <img src="#" alt="#" class="item__image">
+        <div class="item__name">
+          <h2 class="item__caption"></h2>
+          <button class="item__like" type="button"></button>
+        </div>
+      </div>
+    </template>
 <!---  Script  --->
   <script src="./script/index.js"></script>
+  <script src="./script/cards.js"></script>
 </body>
 </html>
