card rebuild for  js

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       <div class="card">
         <button class="card__delete" type="button"></button>
         <img src="#" alt="#" class="card__image">
-        <div class="item__name">
-          <h2 class="item__caption"></h2>
-          <button class="item__like" type="button"></button>
+        <div class="card__name">
+          <h2 class="card__description"></h2>
+          <button class="card__like" type="button"></button>
         </div>
       </div>
     </template>
