--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <button class="popup__close-button" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="card_information">
-        <input class="popup__input popup__input_name" id="place-input" type="text" name="место" placeholder="Название" >
+        <input class="popup__input popup__input_place" id="place-input" type="text" name="место" placeholder="Название" >
         <input class="popup__input popup__input_link" id="link-input" type="url" name="картинка" placeholder="Ссылка на картинку">
       </form>
     </div>
