--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       <button id="close-add-form" class="popup__close-button" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="card_information">
-        <input class="popup__input popup__input_place" id="place-input" type="text" name="name" placeholder="Название" >
+        <input class="popup__input popup__input_name" id="place-input" type="text" name="name" placeholder="Название" >
         <input class="popup__input popup__input_link" id="link-input" type="url" name="link" placeholder="Ссылка на картинку">
-        <input class="popup__submit" type="submit" value="Сохранить">
+        <input type="submit" class="popup__submit" value="Сохранить">
       </form>
     </div>
   </div>
@@ -116,7 +116,7 @@
         <button class="card__delete" type="button"></button>
         <img src="#" alt="#" class="card__image">
         <div class="card__name">
-          <h2 class="card__description"></h2>
+          <h2 class="card__description">description</h2>
           <button class="card__like" type="button"></button>
         </div>
       </div>
