like add^ template error fix

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
     </template>
 <!---  Script  --->
-  <script src="./script/index.js"></script>
-  <script src="./script/cards.js"></script>
+  <script src="./script/index.js" type="module"></script>
+  <!-- <script src="./script/cards.js"></script> -->
 </body>
 </html>
