--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     </div>
   </div>
   <!---  Popup view  --->
-  <div class="popup popup_view">
+  <div id="view-card" class="popup popup__view">
       <div class="popup__container popup__container_view">
-        <button class="popup__close-button" type="button"></button>
+        <button id="close-card" class="popup__close-button" type="button"></button>
         <img src="#" alt="#" class="popup__view-image">
         <p class="popup__description"></p>
        </div>
