--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
   </div>
   <!---  Popup view  --->
-  <div id="view-card" class="popup popup__view">
+  <div id="view-card" class="popup popup_view">
       <div class="popup__container popup__container_view">
         <button id="close-card" class="popup__close-button" type="button"></button>
         <img src="#" alt="#" class="popup__view-image">
