--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </footer>
   <!---  Popup  --->
   <!---  Popup edit  --->
-  <div class="popup popup_edit popup_edit-card">
+  <div class="popup popup_edit">
     <div class="popup__container">
       <button  class="popup__close-button close-edit-form" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
