--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="popup__container">
       <button class="popup__close-button close-add-form" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="card_information">
+      <form class="popup__form popup__add-form" name="card_information">
         <input class="popup__input popup__input_name" id="place-input" type="text" name="name" placeholder="Название" >
         <input class="popup__input popup__input_link" id="link-input" type="url" name="link" placeholder="Ссылка на картинку">
         <input type="submit" class="popup__submit" value="Сохранить">
