--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form popup__edit-form" name="profile_information">
         <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
-        <input type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе">
+        <input type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200">
         <input type="submit" class="popup__submit" value="Сохранить">
       </form>
     </div>
@@ -51,7 +51,7 @@
       <button class="popup__close-button close-add-form" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form popup__add-form" name="card_information">
-        <input class="popup__input popup__input_name" id="place-input" type="text" name="name" placeholder="Название" >
+        <input class="popup__input popup__input_name" id="place-input" type="text" name="name" placeholder="Название" minlength="2" maxlength="40">
         <input class="popup__input popup__input_link" id="link-input" type="url" name="link" placeholder="Ссылка на картинку">
         <input type="submit" class="popup__submit" value="Сохранить">
       </form>
@@ -78,6 +78,6 @@
     </template>
 <!---  Script  --->
   <script src="./script/index.js" type="module"></script>
-  <!-- <script src="./script/cards.js"></script> -->
+  <script src="./script/validate.js"></script>
 </body>
 </html>
