--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <button  class="popup__close-button close-edit-form" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form popup__edit-form" name="profile_information">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя">
-        <input type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200">
+        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required>
+        <input type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200" required>
         <input type="submit" class="popup__submit" value="Сохранить">
       </form>
     </div>
@@ -51,8 +51,8 @@
       <button class="popup__close-button close-add-form" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form popup__add-form" name="card_information">
-        <input class="popup__input popup__input_name" id="place-input" type="text" name="name" placeholder="Название" minlength="2" maxlength="40">
-        <input class="popup__input popup__input_link" id="link-input" type="url" name="link" placeholder="Ссылка на картинку">
+        <input class="popup__input popup__input_name" id="place-input" type="text" name="name" placeholder="Название" minlength="2" maxlength="30" required>
+        <input class="popup__input popup__input_link" id="link-input" type="url" name="link" placeholder="Ссылка на картинку" required>
         <input type="submit" class="popup__submit" value="Сохранить">
       </form>
     </div>
