--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
     <div class="popup__container">
       <button  class="popup__close-button close-edit-form" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form popup__edit-form" name="profile_information">
+      <form class="popup__form popup__edit-form" name="profile_information" novalidate>
         <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required>
+        <span class="popup__input-error input-name-error"></span>
         <input type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200" required>
+        <span class="popup__input-error input-job-error"></span>
         <input type="submit" class="popup__submit" value="Сохранить">
       </form>
+      <span class="popup__input-error name-input-error"></span>
     </div>
   </div>
   <!---  Popup add  --->
@@ -50,9 +53,11 @@
     <div class="popup__container">
       <button class="popup__close-button close-add-form" type="button" aria-label="Закрыть форму"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form popup__add-form" name="card_information">
+      <form class="popup__form popup__add-form" name="card_information" novalidate>
         <input class="popup__input popup__input_name" id="place-input" type="text" name="name" placeholder="Название" minlength="2" maxlength="30" required>
+        <span class="popup__input-error input-place-error"></span>
         <input class="popup__input popup__input_link" id="link-input" type="url" name="link" placeholder="Ссылка на картинку" required>
+        <span class="popup__input-error input-link-error"></span>
         <input type="submit" class="popup__submit" value="Сохранить">
       </form>
     </div>
