--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
       <button  class="popup__close-button close-edit-form" type="button" aria-label="Закрыть форму"></button>
       <form class="popup__form popup__edit-form" name="profile_information" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
+        <div class="popup__form-container">
           <input id="input-name" type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" minlength="2" maxlength="40" required>
           <span class="popup__input-error input-name-error"></span>
+        </div>
+        <div class="popup__form-container">
           <input id="input-job" type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200" required>
           <span class="popup__input-error input-job-error"></span>
+        </div>
         <input type="submit" class="popup__submit" value="Сохранить">
       </form>
     </div>
