fix  size error

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       </div>
     </template>
 <!---  Script  --->
-  <script src="./script/validate2.js"></script>
+  <!-- <script src="./script/validate2.js"></script> -->
   <script src="./script/index.js" type="module"></script>
-  <!-- <script src="./script/validate.js"></script> -->
+  <script src="./script/validate.js"></script>
 </body>
 </html>
