--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <span class="popup__input-error input-name-error"></span>
         </div>
         <div class="popup__form-container">
-          <input id="input-job" type="text" name="about" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200" required>
+          <input id="input-job" type="text" name="job" class="popup__input popup__input_type_job" placeholder="О себе" minlength="2" maxlength="200" required>
           <span class="popup__input-error input-job-error"></span>
         </div>
         <input type="submit" class="popup__submit" value="Сохранить">
