--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <input id="input-link" class="popup__input popup__input_link" type="url" name="link" placeholder="Ссылка на картинку" required>
           <span class="popup__input-error input-link-error"></span>
         </div>
-        <input type="submit" class="popup__submit" value="Сохранить">
+        <input type="submit" class="popup__submit popup__submit__add-button" value="Сохранить">
       </form>
     </div>
   </div>
@@ -89,7 +89,8 @@
       </div>
     </template>
 <!---  Script  --->
-  <script src="./script/validate2.js"></script>
+  <script src="./script/validate3.js"></script>
+  <!-- <script src="./script/validate2.js"></script> -->
   <script src="./script/index.js" type="module"></script>
   <!-- <script src="./script/validate.js"></script> -->
 </body>
