--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
       </div>
     </template>
 <!---  Script  --->
-  <script src="./script/validate3.js"></script>
-  <!-- <script src="./script/validate2.js"></script> -->
+  <script src="./script/validate.js"></script>
   <script src="./script/index.js" type="module"></script>
-  <!-- <script src="./script/validate.js"></script> -->
 </body>
 </html>
