--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <input class="popup__input popup__input_link" type="url" name="input-link" placeholder="Ссылка на картинку" required>
           <span id="input-link-error" class="popup__input-error"></span>
         </div>
-        <input type="submit" class="popup__submit popup_add_submit" value="Сохранить">
+        <input type="submit" class="popup__submit popup_add_button" value="Сохранить">
       </form>
     </div>
   </div>
