--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 <body class="body">
   <!---  Header  --->
   <header class="header">
-    <img src="./images/logo.svg" alt="Логотип" class="header__logo">
+    <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo">
   </header>
   <main class="container">
     <!---  Profile  --->
     <section class="profile">
-        <img src="./images/jacques-yves_cousteau.jpg" alt="Аватар" class="profile__image">
+        <img src="<%=require('./images/jacques-yves_cousteau.jpg')%>"  alt="Аватар" class="profile__image">
       <div class="profile__box">
          <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -89,6 +88,6 @@
       </div>
     </template>
 <!---  Script  --->
-  <script src="./script/index.js" type="module"></script>
+
 </body>
 </html>
