--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
       <form class="popup__form popup__edit-form" name="profile_information" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
         <div class="popup__form-container">
-          <input type="text" name="input-name" class="popup__input popup__input_name" placeholder="Имя" minlength="2" maxlength="40" required>
+          <input type="text" name="input-name" class="popup__input popup__input_name" placeholder="Имя" id="name" minlength="2" maxlength="40" required>
           <span id="input-name-error" class="popup__input-error"></span>
         </div>
         <div class="popup__form-container">
-          <input type="text" name="input-job" class="popup__input popup__input_job" placeholder="О себе" minlength="2" maxlength="200" required>
+          <input type="text" name="input-job" class="popup__input popup__input_job" placeholder="О себе" id="job" minlength="2" maxlength="200" required>
           <span id="input-job-error" class="popup__input-error"></span>
         </div>
         <input type="submit" class="popup__submit" value="Сохранить">
@@ -57,7 +57,7 @@
       <form class="popup__form popup__add-form" name="card_information" novalidate>
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__form-container">
-          <input class="popup__input popup__input_place" type="text" name="input-place" placeholder="Название" minlength="2" maxlength="30" required>
+          <input class="popup__input popup__input_place" type="text" name="input-place" placeholder="Название" id="place" id="link" minlength="2" maxlength="30" required>
           <span id="input-place-error" class="popup__input-error"></span>
         </div>
         <div class="popup__form-container">
