--- a/src/index.html
+++ b/src/index.html
@@ -57,11 +57,11 @@
       <form class="popup__form popup__add-form" name="card_information" novalidate>
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__form-container">
-          <input class="popup__input popup__input_place" type="text" name="input-place" placeholder="Название" id="place" id="link" minlength="2" maxlength="30" required>
+          <input class="popup__input popup__input_place" type="text" name="input-place" placeholder="Название" id="place"  minlength="2" maxlength="30" required>
           <span id="input-place-error" class="popup__input-error"></span>
         </div>
         <div class="popup__form-container">
-          <input class="popup__input popup__input_link" type="url" name="input-link" placeholder="Ссылка на картинку" required>
+          <input class="popup__input popup__input_link" type="url" name="input-link" placeholder="Ссылка на картинку" id="link" required>
           <span id="input-link-error" class="popup__input-error"></span>
         </div>
         <input type="submit" class="popup__submit popup__add-btn" value="Сохранить">
