--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
           <input type="text" name="input-job" class="popup__input popup__input_job" placeholder="О себе" id="job" minlength="2" maxlength="200" required>
           <span id="input-job-error" class="popup__input-error"></span>
         </div>
-        <input type="submit" class="popup__submit" value="Сохранить">
+        <input type="submit" class="popup__submit popup__edit-btn" value="Сохранить">
       </form>
     </div>
   </div>
