--- a/src/index.html
+++ b/src/index.html
@@ -39,14 +39,14 @@
       <form class="popup__form popup__edit-form" name="profile_information" novalidate>
         <h2 class="popup__title">Редактировать профиль</h2>
         <div class="popup__form-container">
-          <input type="text" name="input-name" class="popup__input popup__input_name" placeholder="Имя" id="name" minlength="2" maxlength="40" required>
-          <span id="input-name-error" class="popup__input-error"></span>
+          <input type="text" name="name" class="popup__input popup__input_name" placeholder="Имя" id="name" minlength="2" maxlength="40" required>
+          <span id="name-error" class="popup__input-error"></span>
         </div>
         <div class="popup__form-container">
-          <input type="text" name="input-job" class="popup__input popup__input_job" placeholder="О себе" id="job" minlength="2" maxlength="200" required>
-          <span id="input-job-error" class="popup__input-error"></span>
+          <input type="text" name="job" class="popup__input popup__input_job" placeholder="О себе" id="job" minlength="2" maxlength="200" required>
+          <span id="job-error" class="popup__input-error"></span>
         </div>
-        <input type="submit" class="popup__submit popup__edit-btn" value="Сохранить">
+        <input type="submit" class="popup__submit popup__edit-btn" disabled value="Сохранить">
       </form>
     </div>
   </div>
@@ -57,14 +57,14 @@
       <form class="popup__form popup__add-form" name="card_information" novalidate>
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__form-container">
-          <input class="popup__input popup__input_place" type="text" name="input-place" placeholder="Название" id="place"  minlength="2" maxlength="30" required>
-          <span id="input-place-error" class="popup__input-error"></span>
+          <input class="popup__input popup__input_place" type="text" name="name" placeholder="Название" id="place"  minlength="2" maxlength="30" required>
+          <span id="name-error" class="popup__input-error"></span>
         </div>
         <div class="popup__form-container">
-          <input class="popup__input popup__input_link" type="url" name="input-link" placeholder="Ссылка на картинку" id="link" required>
-          <span id="input-link-error" class="popup__input-error"></span>
+          <input class="popup__input popup__input_link" type="url" name="link" placeholder="Ссылка на картинку" id="link" required>
+          <span id="link-error" class="popup__input-error"></span>
         </div>
-        <input type="submit" class="popup__submit popup__add-btn" value="Сохранить">
+        <input type="submit" class="popup__submit popup__add-btn" disabled  value="Сохранить">
       </form>
     </div>
   </div>
