--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
       <form class="popup__form popup__add-form" name="card_information" novalidate>
         <h2 class="popup__title">Новое место</h2>
         <div class="popup__form-container">
-          <input class="popup__input popup__input_place" type="text" name="name" placeholder="Название" id="place"  minlength="2" maxlength="30" required>
-          <span id="name-error" class="popup__input-error"></span>
+          <input class="popup__input popup__input_place" type="text" name="place" placeholder="Название" id="place"  minlength="2" maxlength="30" required>
+          <span id="place-error" class="popup__input-error"></span>
         </div>
         <div class="popup__form-container">
           <input class="popup__input popup__input_link" type="url" name="link" placeholder="Ссылка на картинку" id="link" required>
